--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="PICCADILLY NIGHT" />
     <meta property="og:description" content="히로타카 영화 합작" />
     <meta property="og:image" content="/og-image.png" />
-    <meta property="og:url" content="https://your-site.vercel.app" />
+    <meta property="og:url" content="hrtk-cinema.vercel.app" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
