--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" /> 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>PICCADILLY NIGHT</title>
@@ -13,14 +15,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="PICCADILLY NIGHT" />
     <meta property="og:description" content="히로타카 영화 합작" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/ogimage.png" />
     <meta property="og:url" content="hrtk-cinema.vercel.app" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PICCADILLY NIGHT" />
     <meta name="twitter:description" content="히로타카 영화 합작" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/ogimage.png" />
   </head>
   <body>
     <div id="root"></div>
