--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="PICCADILLY NIGHT" />
     <meta property="og:description" content="히로타카 영화 합작" />
-    <meta property="og:image" content="/ogimage.png" />
+    <meta property="og:image" content="https://hrtk-cinema.vercel.app/ogimage.png" />
     <meta property="og:url" content="hrtk-cinema.vercel.app" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PICCADILLY NIGHT" />
     <meta name="twitter:description" content="히로타카 영화 합작" />
-    <meta name="twitter:image" content="/ogimage.png" />
+    <meta name="twitter:image" content="https://hrtk-cinema.vercel.app/ogimage.png" />
   </head>
   <body>
     <div id="root"></div>
